Add file select, user info fetch

--- a/src/client/src/components/FileElement.css
+++ b/src/client/src/components/FileElement.css
@@ -9,5 +9,13 @@
 }
 
 .FileElement:hover {
+  background-color:  #aaccff77;
+}
+
+.Selected {
   background-color: #aaccff;
+}
+
+.Selected:hover {
+  background-color:  #aaccffdd;
 }
