--- a/src/client/src/index.css
+++ b/src/client/src/index.css
@@ -1,8 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap');
+
+* {
+  font-family: 'Source Sans Pro', sans-serif;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  padding:  0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #e8eaf6;
+  /*background-color: #eeeaf7;*/ /* this is for top bar */
+  background: linear-gradient(to right, #eaeaf6,  #eeeaf7);
+  font-size:  13px;
 }
