Add FileList in storage analyzer. Switch to quotaBytes.

--- a/src/client/src/components/StorageAnalyzer.css
+++ b/src/client/src/components/StorageAnalyzer.css
@@ -11,8 +11,13 @@
   background-color: #f8f6fb;
   flex-grow: 1;
   overflow-y: hidden;
-  padding: 1rem;
   
   display: flex;
+  flex-direction: column;
+}
+
+.StorageGraphs {
+  display: flex;
   justify-content: space-around;
+  padding: 1rem;
 }
