--- a/src/client/src/App.css
+++ b/src/client/src/App.css
@@ -86,7 +86,6 @@
   border-radius: 2px 4px 0 0;
   margin-right: 2px;
   min-width: 8rem;
-  cursor: pointer;
 }
 
 .Tab:hover {
@@ -95,6 +94,7 @@
 
 .ActiveTab {
   background-color: #f8f6fb;
+  cursor: inherit;
 }
 
 .ActiveTab:hover {
