--- a/src/client/src/App.css
+++ b/src/client/src/App.css
@@ -16,6 +16,7 @@
   display: flex;
   flex-direction: column;
   gap: 1.4rem;
+  background: #E7EAF7;    /* blue */
 }
 
 .StatusBar {
@@ -55,15 +56,6 @@
   gap:  0.7rem;
   padding:  0.6rem 1.2rem;
   border: #eee solid 1px;
-}
-
-.FileElementList {
-  overflow-y: scroll;
-  background-color: #fbfbfd;
-  flex-grow: 1;
-  padding: 0 2rem 0 2rem;
-  margin: 0;
-  max-width: 100%;
 }
 
 .AddressBar {
