--- a/src/client/src/components/Dashboard.css
+++ b/src/client/src/components/Dashboard.css
@@ -5,7 +5,7 @@
 .UserCard {
   display: flex;
   border-radius: 0.6rem;
-  width: 17rem;
+  min-width: 17rem;
   align-items: center;
   gap: 1rem;
   background: #E2E2F0;
@@ -20,4 +20,27 @@
   align-items: center;
   gap: 10px;
   color: #444
+}
+
+.DashboardElementContents {
+  display: flex;
+  flex-direction: 'row';
+  flex-wrap: wrap;
+}
+
+.AddAccountCard {
+  padding: 0.5rem;
+  background: #E2E2F0;
+}
+
+.AddAccountBorder {
+  border: 1px dashed #777;
+  border-radius: 0.4rem;
+  color: #666;
+  width: 100%;
+  height: 100%;
+  
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
