Add clipboard UI

--- a/src/client/src/components/Dashboard.css
+++ b/src/client/src/components/Dashboard.css
@@ -8,7 +8,7 @@
   min-width: 17rem;
   align-items: center;
   gap: 1rem;
-  background: #E2E2F0;
+  background: #8b64ff0c;
   cursor: pointer;
   box-shadow: 0px 2x 0px 0px #DEDEDE;
   margin: 1rem 1rem 0rem 0rem;
