--- a/src/client/src/App.css
+++ b/src/client/src/App.css
@@ -12,11 +12,13 @@
 .SideBar {
   padding-top: 2rem;
   padding-left: 2.2rem;
-  height: 100%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   gap: 1.4rem;
   background: #E7EAF7;    /* blue */
+  background: #f0efff;    /* blue */
+  overflow-y: auto;
 }
 
 .StatusBar {
@@ -54,8 +56,12 @@
   background-color: #fbfbfd;
   display: flex;
   gap:  0.7rem;
-  padding:  0.6rem 1.2rem;
+  padding:  0.5rem 1.2rem;
+  /* height: 5rem;
+  max-height: 5rem; */
   border: #eee solid 1px;
+  width: 100%;
+  align-content: stretch;
 }
 
 .AddressBar {
@@ -66,7 +72,8 @@
 .TabsBar {
   display: flex;
   padding-top: 10px;
-  background-color: #eeeaf7;
+  /* background-color: #eeeaf7; */
+  background: #f2efff;
 }
 
 .Tab {
@@ -165,8 +172,67 @@
   border: 1px #ddf solid;
   box-shadow: #444 2px 6px 15px 10px;
   padding: 2rem;
+
+  -webkit-transition-duration: 0.3s;
+  -moz-transition-duration: 0.3s;
+  -o-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+}
+
+.OverlayCardClosing {
+  transform: translate(0, 100vh);
+  transform: scale(0.0);
+  box-shadow: none;
 }
 
 .Hidden {
   display: none;
+}
+
+.Clipboard {
+  position: fixed;
+  bottom: 0px;
+  left: 10px;
+
+  min-width: 267px;
+  /* min-height: 80px; */
+
+  background: #f9f9fb;
+
+  border-radius: 10px 10px 5px 5px;
+  margin-bottom: 0.5rem;
+  box-shadow: #e2e1e7 0px 2px 3px 3px;
+  overflow: hidden;
+}
+
+.ClipboardHeader {
+ display: flex;
+ justify-content: space-between;  
+ align-items: center;
+ background: #ddf;
+ background: #e6e5f5;
+ height: 2.1rem;
+ padding: 0rem 0.35rem 0rem 1rem;
+ font-weight: 600;
+ font-size: 14px;
+}
+
+.ClipboardContent {
+  list-style: none;
+  padding-left: 0px;
+  padding: 1rem;
+  margin: 0;
+}
+
+.ClipboardItem {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding: 2px;
+  margin: 8px 0;
+}
+
+.bp3-button:focus {
+  outline: rgba(0,0,0,0) auto 0;
+  outline-offset: 0;
 }
