Fix sidebar tree styling, context menu select

--- a/src/client/src/App.css
+++ b/src/client/src/App.css
@@ -187,7 +187,13 @@
 
 .Hidden {
   display: none;
-  /* opacity: 0; */
+  /* opacity: 0;   */
+  /* Looks better on sidebartree */
+}
+
+.HiddenSidebarButton {
+  opacity: 0;
+  margin: 0;
 }
 
 .Clipboard {
