--- a/src/client/src/components/StorageAnalyzer.css
+++ b/src/client/src/components/StorageAnalyzer.css
@@ -1,56 +1,16 @@
 .FileTypeChart {
-  margin-top: -120px;
-  width: 100%;
-}
-
-.DriveActivityChart {
-  width: 100%;
-  height: 100%;
-}
-
-.FolderSunburstChart {
-  width: 100%;
-  height: 50%;
-}
-
-.HalfDonutContainer {
-  /* min-height: 300px; */
-  /* border: 2px dashed gray; */
-  overflow: hidden;
-  width: 100%;
-  /* height: 80px; */
-  
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-}
-
-.HalfDonutLegend {
-  /* border: 2px dashed red; */
-  /* height: 200px; */
-  width: 100%;
-  margin-top: -100px;
-  padding: 1rem;
-}
-
-.Card {
-  width: auto;
-
+  width: 50%;
+  min-height: 300px;
   border: 2px solid #dcd5e7;
-  border-radius: 5px;
-  padding: 1rem;
-  margin: 0.5rem;
-  overflow: hidden;
-
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  border-radius: 10px;
+  padding: 1rem 1rem;
+  margin: 10px;
 }
 
 .StorageAnalyzer {
-  background-color: #fbfbfd;
+  background-color: #f8f6fb;
   flex-grow: 1;
-  overflow-y: auto;
+  overflow-y: hidden;
   
   display: flex;
   flex-direction: column;
@@ -58,37 +18,8 @@
 }
 
 .StorageGraphs {
-  /* display: flex;
+  display: flex;
   justify-content: space-around;
   padding: 1rem;
-  max-width: 100%; */
-  display: grid;
-  grid-template-columns: repeat(20, 1fr);
-  grid-template-rows: repeat(20, 1fr);
-  height: 100%;
-}
-
-.TopLeft {
-  grid-column: 1/15;
-  grid-row: 1/5;
-}
-
-.BottomLeft {
-  grid-column: 1/5;
-  grid-row: 5/-1;
-}
-
-.Middle {
-  grid-column: 5/15;
-  grid-row: 5/15;
-}
-
-.BottomRight {
-  grid-column: 15/21;
-  grid-row: 11/21;
-}
-
-.TopRight {
-  grid-column: 15/21;
-  grid-row: 1/11;
+  max-width: 100%;
 }
